Simplified Chinese, map bookmarks

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script>window.L || document.write("<script src='bin/leaflet.js'><\/script>");</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20161208"></script>
+	<script type="text/javascript" src="data/general.js?v=20161208A"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -721,7 +721,8 @@
 					<li><a class="linkLanguage" data-lang="pl">Polski</a></li>
 					<li><a class="linkLanguage" data-lang="pt">Português</a></li>
 					<li><a class="linkLanguage" data-lang="ru">Русский</a></li>
-					<li><a class="linkLanguage" data-lang="zh">中文</a></li>
+					<li><a class="linkLanguage" data-lang="tw">繁體中文</a></li>
+					<li><a class="linkLanguage" data-lang="zh">简体中文</a></li>
 					<li><a class="linkExternal" href="http://forum.renaka.com/topic/5529319/"><sub>Help Translate</sub></a></li>
 				</ul>
 			</div>
