--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script>window.L || document.write("<script src='bin/leaflet.js'><\/script>");</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20170103"></script>
+	<script type="text/javascript" src="data/general.js?v=20170103A"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -40,7 +40,7 @@
 	<div id="itemProjector"></div>
 	<div id="itemNull"></div><!-- Container for creating temporary elements to get their computed dimensions -->
 	<div id="itemAutoscroll"></div><!-- Cursor for autoscrolling -->
-	<kbd id="itemProjection" title="<dfn>Click to toggle projection.<br />Right click for map menu.</dfn>"></kbd><!-- Menu button for projection overlay -->
+	<kbd id="itemProjection" title="<dfn>Click to toggle map terrain.<br />Right click for map menu.</dfn>"></kbd><!-- Menu button for projection overlay -->
 	<div id="itemVignette"></div><!-- Ornamental shadow frame for window overlay -->
 	<div id="itemConsole">
 		<div id="cslButtons">
