Database update, Lake Doric zone

--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
 					<div class="mapZonesPopup hudPopup cntComposition">
 						<div id="mapZoneList" class="mapZoneList mapZoneLinks">
 							<aside>
+								<input id="mapSearch" type="text" />
 								<h2 data-region="ring"></h2>
 								<ul>
 									<li data-zone="ember"></li>
@@ -307,7 +308,6 @@
 								</ul>
 							</aside>
 							<aside>
-								<input id="mapSearch" type="text" />
 								<h2 data-region="kryta"></h2>
 								<ul>
 									<li data-zone="divinity"></li>
@@ -318,6 +318,7 @@
 									<li data-zone="harathi"></li>
 									<li data-zone="bloodtide"></li>
 									<li data-zone="southsun"></li>
+									<li data-zone="doric"></li>
 								</ul>
 								<h2 data-region="shiverpeaks"></h2>
 								<ul>
