--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<script type="text/javascript" src="plugins.js"></script>
 	<script type="text/javascript" src="data/general.js?v=20170211"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
-	<script type="text/javascript" src="gw2t-min?v=20170211.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
+	<script type="text/javascript" src="gw2t-min.js?v=20170211A"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
