Collectible subpath, Noran JP

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<script type="text/javascript" src="plugins.js"></script>
 	<script type="text/javascript" src="data/general.js?v=20170211"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
-	<script type="text/javascript" src="gw2t-min.js?v=20170211A"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
+	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -53,10 +53,10 @@
 	<div id="itemWarning">
 		If you can read this then <strong>maybe</strong>:<br />
 		- You are still loading the website (slowly); ignore this message.<br />
-		- You are using Internet Explorer 10 or lower; please <a href="http://microsoft.com/ie">upgrade</a> to IE11 or higher.<br />
+		- You are using an unsupported browser; please try another browser.<br />
 		- Your browser's adblocker is blocking the leaflet.js map script; please whitelist it.<br />
-		- This web application encountered a bug; try refreshing, or <a href="bin/clear.html">clearing</a> its localStorage.<br />
-		Do you want to <a href="http://forum.renaka.com/topic/5476238/">report</a> this problem?<br />
+		- This web application encountered a bug; try refreshing (Ctrl+F5).<br />
+		Do you want to <a href="http://forum.renaka.com/topic/5476238/">ask for help?</a><br />
 	</div>
 	<kbd id="watToggle" class="btnWindow btnToggle" title="<dfn>Toggle stopwatch.</dfn> Click the stop button to reset."></kbd>
 	<div id="itemStopwatch">
