--- a/bin/clear.html
+++ b/bin/clear.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>GW2Timer Application Reset</title>
 		<script type="text/javascript">
-			if (confirm("GW2Timer.com Reset: This is will clear all options and everything you have written in this website. Continue?"))
+			if (confirm("Please consult the forum if you are having problems using the website: http://gw2timer.com/forum\n\n"
+				+ "GW2Timer.com Reset: This will clear all options and everything you have written in this website. Continue?"))
 			{
 				localStorage.clear();
 			}
