Map instance GPS, floor function, Caudecus

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script>window.L || document.write("<script src='bin/leaflet.js'><\/script>");</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20170211"></script>
+	<script type="text/javascript" src="data/general.js?v=20170212"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -182,21 +182,24 @@
 								<li><a class="linkExternal" href="http://forum.renaka.com/topic/5954229/"><ins class="s16 s16_wiki"></ins></a> - ArenaNet endorsements</li>
 							</ul>
 						</div>
-						<div class="hudDirectoryColumn">
-							<h2>Guides</h2>
-							<ul>
-								<li><a class="linkExternal" href="http://forum.renaka.com/topic/6209670/">LS3: Transfer Chaser</a></li>
-								<li><a class="linkExternal" href="http://forum.renaka.com/topic/6205181/">LS3: Bloodstone-Crazed Creatures</a></li>
-								<li><a class="linkExternal" href="https://www.reddit.com/r/Guildwars2/comments/4urr23/leyline_anomaly_tldr_guide_v2/">LS3: Ley-Line Anomaly</a></li>
-								<li><a class="linkExternal" href="https://www.reddit.com/r/Guildwars2/comments/3p5lw3/i_spent_50_hours_running_through_tyria_with_a_gps/">GPS World Completion</a></li>
-								<li><a class="linkExternal" href="https://www.reddit.com/r/Guildwars2/comments/4bijoi/lets_catch_all_50_ranger_pets_a_map_and_pokedex/">Ranger Pets Map</a></li>
-							</ul>
+						<div class="hudDirectoryColumn jsScrollable" id="hudDirectoryGuides">
 							<h2>Tutorials</h2>
 							<ul>
 								<li><a class="linkExternal" href="https://www.youtube.com/watch?v=uXqvTMGNIXo">How to use GW2Timer.com</a></li>
 								<li><a class="linkExternal" href="http://forum.renaka.com/topic/5602037/">Timer Features</a></li>
 								<li><a class="linkExternal" href="http://forum.renaka.com/topic/5888854/">Map Features</a></li>
 								<li><a class="linkExternal" href="http://forum.renaka.com/topic/5697040/">TP &amp; Gem Tracker</a></li>
+							</ul>
+							<h2>Guides</h2>
+							<ul>
+								<li><a class="linkExternal" href="https://www.reddit.com/r/Guildwars2/comments/5tgubw/compilation_of_lake_doric_maps_and_resources/">Zone: Lake Doric</a></li>
+								<li><a class="linkExternal" href="https://www.reddit.com/r/Guildwars2/comments/5epb0k/i_got_turned_into_a_snowcone_dozens_of_times_but/">Zone: Bitterfrost Frontier</a></li>
+								<li><a class="linkExternal" href="https://www.reddit.com/r/Guildwars2/comments/4vic4c/bloodstone_fen_map_tools_resource_nodes_event_map/">Zone: Bloodstone Fen</a></li>
+								<li><a class="linkExternal" href="http://forum.renaka.com/topic/6209670/">LS3: Transfer Chaser</a></li>
+								<li><a class="linkExternal" href="http://forum.renaka.com/topic/6205181/">LS3: Bloodstone-Crazed Creatures</a></li>
+								<li><a class="linkExternal" href="https://www.reddit.com/r/Guildwars2/comments/4urr23/leyline_anomaly_tldr_guide_v2/">LS3: Ley-Line Anomaly</a></li>
+								<li><a class="linkExternal" href="https://www.reddit.com/r/Guildwars2/comments/3p5lw3/i_spent_50_hours_running_through_tyria_with_a_gps/">GPS World Completion</a></li>
+								<li><a class="linkExternal" href="https://www.reddit.com/r/Guildwars2/comments/4bijoi/lets_catch_all_50_ranger_pets_a_map_and_pokedex/">Ranger Pets Map</a></li>
 							</ul>
 						</div>
 					</div>
