Sale update, Chinese JP col names, slot search

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script>window.L || document.write("<script src='bin/leaflet.js'><\/script>");</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20170218"></script>
+	<script type="text/javascript" src="data/general.js?v=20170219"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -226,7 +226,7 @@
 						<span class="hudButtonContainer"><img id="mapGPSIcon" class="hudButton" data-src="img/map/gps.png" alt="GPS" /><span class="hudArrow"></span></span>
 					</span>
 					<div class="hudPopup cntComposition">
-						<fieldset name="int_setFollow" class="optFollowFieldset" title="Automatically moves the map to where you are:<br /><dfn>Off</dfn>: No follow<br /><dfn>Character</dfn>: Center on your character<br /><dfn>Zone</dfn>: Center on the zone your character is in"><legend>GPS Follow</legend>
+						<fieldset name="int_setFollow" class="optFollowFieldset" title="Automatically move the map to where you are:<br /><dfn>Off</dfn>: No follow<br /><dfn>Character</dfn>: Center on your character<br /><dfn>Zone</dfn>: Center on the zone your character is in"><legend>GPS Follow</legend>
 							<label><input id="opt_int_setFollow" type="radio" name="int_setFollow" /> Off</label>
 							<label><input type="radio" name="int_setFollow" /> Character</label>
 							<label><input type="radio" name="int_setFollow" /> Zone</label>
@@ -509,7 +509,7 @@
 						<span class="hudButtonContainer"><img class="hudButton" data-src="img/map/gps.png" alt="GPS" /><span class="hudArrow"></span></span>
 					</span>
 					<div class="hudPopup cntComposition">
-						<fieldset name="int_setFollowWvW" class="optFollowFieldset" title="Automatically moves the map to where you are:<br /><dfn>Off</dfn>: No follow<br /><dfn>Character</dfn>: Center on your character<br /><dfn>Zone</dfn>: Center on the zone your character is in"><legend>GPS Follow</legend>
+						<fieldset name="int_setFollowWvW" class="optFollowFieldset" title="Automatically move the map to where you are:<br /><dfn>Off</dfn>: No follow<br /><dfn>Character</dfn>: Center on your character<br /><dfn>Zone</dfn>: Center on the zone your character is in"><legend>GPS Follow</legend>
 							<label><input id="opt_int_setFollowWvW" type="radio" name="int_setFollowWvW" /> Off</label>
 							<label><input type="radio" name="int_setFollowWvW" /> Character</label>
 							<label><input type="radio" name="int_setFollowWvW" /> Zone</label>
