--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 						<kbd id="tmlToggle" class="btnWindow btnToggle" title="<dfn>Toggle the timeline.</dfn> To hide permanently, go to Options page, Map section.<br /> To toggle all, right click on the map and choose &quot;Toggle HUD&quot;."></kbd>
 						<div id="tmlContainer">
 							<kbd id="tmlOpaque" class="btnWindow btnOpaque" title="<dfn>Toggle timeline opacity.</dfn>"></kbd>
+							<kbd id="tmlCondense" class="btnWindow btnVertical" title="<dfn>Condense the timeline.</dfn>"></kbd>
 							<kbd id="tmlDelete" class="btnWindow btnClose" title="<dfn>Permanently hide the timeline.</dfn> To restore, go to Options page, Map section."></kbd>
 							<div id="tmlIndicator"></div>
 							<div id="tmlBisector"></div>
@@ -258,6 +259,7 @@
 						<div class="mapOptionsOther">
 							<label class="cssHidden"><input id="opt_bol_showFloor" type="checkbox" /></label>
 							<label class="cssHidden"><input id="opt_bol_showCoordinatesBar" type="checkbox" /></label>
+							<label class="cssHidden"><input id="opt_bol_condenseTimelineLine" type="checkbox" /></label>
 							<label class="cssHidden"><input id="opt_bol_condenseTimelineHeader" type="checkbox" /></label>
 							<label><img data-src="img/map/floor.png" /><input id="opt_int_setFloor" class="optSlider" type="range" min="0" max="3" step="1" title="Set map floor level.<br />Example: Verdant Brink has multiple floors." /></label>
 							<label title="Show/Hide region-colored borders over zones."><img data-src="img/map/border.png" /><input id="opt_bol_showZoneBorders" type="checkbox" /> Show zone borders</label>
