--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script>window.L || document.write("<script src='bin/leaflet.js'><\/script>");</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20170222"></script>
+	<script type="text/javascript" src="data/general.js?v=20170223"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -204,8 +204,8 @@
 								<li><a href="http://forum.renaka.com/topic/6205181/">LS3: Bloodstone-Crazed Creatures</a></li>
 								<li><a href="https://www.reddit.com/r/Guildwars2/comments/4urr23/leyline_anomaly_tldr_guide_v2/">LS3: Ley-Line Anomaly</a></li>
 								<li><a href="http://gw2timer.com/?page=Schedules">World Bosses &amp; Temples</a></li>
+								<li><a href="https://www.reddit.com/r/Guildwars2/comments/5v6v37/altoholic_world_bosses_dead_because_you_didnt/">Important Waypoints</a></li>
 								<li><a href="https://www.reddit.com/r/Guildwars2/comments/3p5lw3/i_spent_50_hours_running_through_tyria_with_a_gps/">GPS World Completion</a></li>
-								<li><a href="https://www.reddit.com/r/Guildwars2/comments/5v6v37/altoholic_world_bosses_dead_because_you_didnt/">Boss/Dungeon/Guild Waypoints</a></li>
 								<li><a href="https://www.reddit.com/r/Guildwars2/comments/4bijoi/lets_catch_all_50_ranger_pets_a_map_and_pokedex/">Ranger Pets Map</a></li>
 							</ul>
 						</div>
