--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script>window.L || document.write("<script src='bin/leaflet.js'><\/script>");</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20170301A"></script>
+	<script type="text/javascript" src="data/general.js?v=20170303"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -238,7 +238,7 @@
 					</div>
 				</div>
 				<div class="mapOptions hudItem">
-					<span id="mapDisplayButton" class="hudSelect" title="<dfn>Click to Expand Map</dfn>">
+					<span id="mapDisplayButton" class="hudSelect" title="<dfn>Click to Toggle HUD</dfn>">
 						<span class="hudButtonContainer"><img class="hudButton" src="img/map/display.png" alt="display" /><span class="hudArrow"></span></span>
 						<var class="hudTitle jsTranslate">Display</var>
 					</span>
@@ -526,7 +526,7 @@
 					</div>
 				</div>
 				<div class="mapOptions hudItem">
-					<span id="wvwDisplayButton" class="hudSelect" title="<dfn>Click to Expand Map</dfn>">
+					<span id="wvwDisplayButton" class="hudSelect" title="<dfn>Click to Toggle HUD</dfn>">
 						<span class="hudButtonContainer"><img class="hudButton" data-src="img/map/display.png" alt="display" /><span class="hudArrow"></span></span>
 						<var class="hudTitle jsTranslate">Display</var>
 					</span>
@@ -895,6 +895,7 @@
 					<label title="Include account's current Trading Post transactions in audit."><input id="opt_bol_auditTransactions" type="checkbox" /> Audit includes trading transactions</label>
 					<label title="Include guild vaults contents in audit."><input id="opt_bol_auditVault" type="checkbox" /> Audit includes guilds vault</label>
 					<label title="Will load an invisible iframe of the audit page at every daily reset.<br />You must have an API key entered and checkmarked on the account page."><input id="opt_bol_auditAccountOnReset" type="checkbox" /> Automatically audit at daily reset</label>
+					<label title="Audit history will record the converted sum of all currencies in a category (for example gems of outfits) rather than only the coin currency."><input id="opt_bol_auditHistoryConverted" type="checkbox" /> Convert and sum category's currencies in audit history</label>
 					<label title="How many last audit reports will be saved?"><input id="opt_int_numAuditReports" type="number" min="32" max="4096" step="1" /> Number of audit reports in history</label>
 					<h2>Trading</h2>
 					<label title="Regularly get the current buy and sell prices. This option must be enabled for notification of desired price range to work."><input id="opt_bol_refreshPrices" type="checkbox" /> Auto-refresh data and enable notification</label>
