Fix panel toggle wrong assignment

--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
 					</div>
 				</div>
 				<div class="mapOptions hudItem">
-					<span id="mapDisplayButton" class="hudSelect" title="<dfn>Click to Toggle HUD</dfn>">
+					<span id="mapDisplayButton" class="cssHidden"></span>
+					<span id="mapViewButton" class="hudSelect" title="<dfn>Click to Toggle HUD</dfn>">
 						<span class="hudButtonContainer"><img class="hudButton" src="img/map/display.png" alt="display" /><span class="hudArrow"></span></span>
 						<var class="hudTitle jsTranslate">Display</var>
 					</span>
@@ -526,7 +527,8 @@
 					</div>
 				</div>
 				<div class="mapOptions hudItem">
-					<span id="wvwDisplayButton" class="hudSelect" title="<dfn>Click to Toggle HUD</dfn>">
+					<span id="wvwDisplayButton" class="cssHidden"></span>
+					<span id="wvwViewButton" class="hudSelect" title="<dfn>Click to Toggle HUD</dfn>">
 						<span class="hudButtonContainer"><img class="hudButton" data-src="img/map/display.png" alt="display" /><span class="hudArrow"></span></span>
 						<var class="hudTitle jsTranslate">Display</var>
 					</span>
